--- a/src/component/AuthForm.css
+++ b/src/component/AuthForm.css
@@ -8,6 +8,11 @@
     box-sizing: border-box;
   }
   
+  /*Text alignment has been changed*/
+  .auth-container p
+  {
+    text-align: center;
+  }
   body
   {
     background-color:  #d9b99b;
@@ -35,9 +40,22 @@
     border-color: #0066CC;
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.1), 0 0 0 2px rgba(0,102,204,0.25);
   }
+
+  /*Button locations*/
+  .button-container{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .register-buttons{
+    display: flex;
+    justify-content: space-between;
+  }
   
   button {
+    flex: 1;
     padding: 10px;
+    margin: 5px;
     font-size: 14px;
     border: none;
     border-radius: 10px;
